home page error fixed

--- a/courses.html
+++ b/courses.html
@@ -29,7 +29,7 @@
         <div class="header-link">
             <a href="./courses.html">All Cources</a>
             <a href="./popular_corses.html">Popular Cources</a>
-            <a href="">Learning Paths</a>
+            <a href="./learnpage.html">Learning Paths</a>
         </div>
     </section>
 
