--- a/login.html
+++ b/login.html
@@ -19,9 +19,9 @@
 
       <form action="">
         <p style="margin-bottom: 5px">User Name or Email</p>
-        <input id="userName" style="margin-bottom: 5px" type="text" placeholder="User Name or Email" />
+        <input  required id="userName" style="margin-bottom: 5px" type="text" placeholder="User Name or Email" />
         <p style="margin-bottom: 5px">Password</p>
-        <input id="pass" type="password" placeholder="Password" />
+        <input  required id="pass" type="password" placeholder="Password" />
         <div id="reme">
           <input id="checkBox" type="checkbox" />
           <p>Remember Me</p>
