--- a/coursesnew.html
+++ b/coursesnew.html
@@ -62,10 +62,10 @@
             <p>This course and others like it are available as part of our Frontend Masters video subscription.</p><br>
 
             <p>Published: May 4, 2021</p><br><br>
- 
-             <p>Learning Paths:ProfessionalReact.js</p><br><br><br>
 
-             <button id="sbs">Get Unlimited Access Now</button>
+            <p>Learning Paths:ProfessionalReact.js</p><br><br><br>
+
+            <button id="sbs" onclick=window.location.href="pricing.html">Get Unlimited Access Now</button>
 
         </div>
     </div>
@@ -81,7 +81,7 @@
     header.innerHTML = navbar()
 
 
-import footer from "./components/footer.js";
-let footer_div=document.getElementById("footer-section");
-footer_div.innerHTML=footer()
+    import footer from "./components/footer.js";
+    let footer_div = document.getElementById("footer-section");
+    footer_div.innerHTML = footer()
 </script>
