payment and checkout link error added

--- a/payment_success.html
+++ b/payment_success.html
@@ -13,7 +13,10 @@
     <div class="container">
         <form>
             <div>
-                <img src="https://static.frontendmasters.com/assets/fm/js/static/frontendmasters.e1e10b58c1.svg" alt="">
+                <a href="./index.html"> <img
+                        src="https://static.frontendmasters.com/assets/fm/js/static/frontendmasters.e1e10b58c1.svg"
+                        alt=""></a>
+
             </div>
             <div>
                 <h2>payment success</h2>
