Home page CSS fixed

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,6 @@
     <link rel="stylesheet" href="./style/navbar.css">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/footer.css">
-
 
 <body>
     <div id="container">
@@ -28,9 +28,11 @@
                 </div>
             </div>
             <div id="bg-video-div">
+                <img id="orange" src="./images/svgexport-1.svg" alt="">
                 <video src="https://static.frontendmasters.com/assets/fm/med/home/hero.mp4" autoplay muted loop
                     id="bg-video">
                 </video>
+                <img id="gray" src="./images/svgexport-2.svg" alt="">
             </div>
         </section>
         <!-- Background video div END -->
