Backend and frontend updated

--- a/checkout.html
+++ b/checkout.html
@@ -60,7 +60,7 @@
                     <label>
                         <input type="checkbox" checked="checked" required> Shipping address same as billing
                     </label>
-                    <a href="payment_success.html"> <input type="button" value="Continue to checkout" class="btn"></a>
+                    <a href="./payment_success.html"> <input type="button" value="Continue to checkout" class="btn"></a>
 
                 </form>
             </div>
