--- a/learnpage.html
+++ b/learnpage.html
@@ -293,4 +293,21 @@
     import footer from "./components/footer.js"
     let footer_div = document.getElementById("footer-section")
     footer_div.innerHTML = footer();
+
+    //Logout button remove code 
+    var btn1 = localStorage.getItem("btn")
+    let getBtn = document.getElementById("logout-btn-div")
+    getBtn.innerHTML = btn1;
+
+    document.getElementById("logout-btn").addEventListener("click", removeB);
+
+    function removeB() {
+
+        var element = document.getElementById("logout-btn-div");
+        element.remove(element);
+        localStorage.removeItem("btn")
+        localStorage.removeItem("loginCheck")
+        window.location.href = "index.html"
+    }
+    //Logout button remove code END
 </script>
