--- a/login.html
+++ b/login.html
@@ -17,18 +17,18 @@
   <div class="container">
     <div class="box1">
 
-      <form action="">
-        <p style="margin-bottom: 5px">User Name or Email</p>
-        <input  required id="userName" style="margin-bottom: 5px" type="text" placeholder="User Name or Email" />
-        <p style="margin-bottom: 5px">Password</p>
-        <input  required id="pass" type="password" placeholder="Password" />
-        <div id="reme">
-          <input id="checkBox" type="checkbox" />
-          <p>Remember Me</p>
-        </div>
-        <input id="LogInbtn" type="submit" value="Log In" style="margin-bottom: 5px">
-        <a href="">Forgot your password?</a>
-      </form>
+
+      <p style="margin-bottom: 5px">User Name or Email</p>
+      <input required id="userName" style="margin-bottom: 5px" type="text" placeholder="User Name or Email" />
+      <p style="margin-bottom: 5px">Password</p>
+      <input required id="pass" type="password" placeholder="Password" />
+      <div id="reme">
+        <input id="checkBox" type="checkbox" />
+        <p>Remember Me</p>
+      </div>
+      <input id="LogInbtn" value="Log In" style="margin-bottom: 5px">
+      <a href="">Forgot your password?</a>
+
 
     </div>
   </div>
