Video svg bar size change

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
                 <p id="video-section-p">with In-Depth, Modern <br>Front-End Engineering Courses</p>
                 <div id="video-section-btn-div">
                     <a class="video-section-btn" id="browse-our-courses" href="./courses.html">Browse Our Courses</a>
-                    <a class="video-section-btn" id="view-learning-paths" href="">View Learning Paths</a>
+                    <a class="video-section-btn" id="view-learning-paths" href="./learnpage.html">View Learning
+                        Paths</a>
                 </div>
             </div>
             <div id="bg-video-div">
-                <img id="orange" src="./images/svgexport-1.svg" alt="">
+                <img id="orange" src="./images/orange-line.svg" alt="">
                 <video src="https://static.frontendmasters.com/assets/fm/med/home/hero.mp4" autoplay muted loop
                     id="bg-video">
                 </video>
-                <img id="gray" src="./images/svgexport-2.svg" alt="">
+                <img id="gray" src="./images/gray-line.svg" alt="">
             </div>
         </section>
         <!-- Background video div END -->
@@ -91,7 +92,7 @@
         <section id="joinnow-section">
             <div id="joinnow-div">
                 <p id="joinnow-text">Join Now and Learn Straight <br> from the Experts Who Shape <br> the Modern Web</p>
-                <a id="joinnow-btn" href="">Join Now</a>
+                <a id="joinnow-btn" href="./pricing.html">Join Now</a>
             </div>
         </section>
         <!-- Join Scetion END -->
