--- a/payment_success.html
+++ b/payment_success.html
@@ -19,10 +19,11 @@
 
             </div>
             <div>
-                <h2>payment success</h2>
+                <h2>Order Received</h2>
             </div>
             <div>
-                <p>Your payment was Successfully completed</p>
+                <p>Your payment was successfully</p>
+                <p>Check your registred email for more details</p>
             </div>
             <div>
                 <a href="index.html"> <input id="button" type="button" value="Continue Shopping"></a>
